# xmonad-contrib

./: .authorspellings  .gitignore  .hlint.yaml  .mailmap  .travis.yml  Accordion.hs  Anneal.hs  BackCompat.hs  CHANGES.md  CONTRIBUTING.md  Circle.hs  Combo.hs  Commands.hs  ConstrainedResize.hs  CopyWindow.hs  CycleWS.hs  DeManage.hs  Decoration.hs  DirectoryPrompt.hs  Dishes.hs  Dmenu.hs  Documentation.hs  DragPane.hs  DwmPromote.hs  DynamicLog.hs  DynamicWorkspaces.hs  Dzen.hs  EwmhDesktops.hs  FindEmptyWorkspace.hs  FlexibleManipulate.hs  FlexibleResize.hs  FloatKeys.hs  FocusNth.hs  GreedyView.hs  Grid.hs  HintedTile.hs  Invisible.hs  LICENSE  LayoutChoice.hs  LayoutCombinators.hs  (+69 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: haskell-ci-hackage.patch  haskell-ci-hlint.patch  haskell-ci.yml  hlint.yaml  nix.yml  packdeps.yml  stack.yml  tests-master.yml  tests.yml
XMonad/: Doc.hs  Prelude.hs  Prompt.hs
XMonad/Actions/: AfterDrag.hs  AppLauncher.hs  BluetileCommands.hs  Commands.hs  ConditionalKeys.hs  ConstrainedResize.hs  CopyWindow.hs  CycleRecentWS.hs  CycleSelectedLayouts.hs  CycleWS.hs  CycleWindows.hs  CycleWorkspaceByScreen.hs  DeManage.hs  DwmPromote.hs  DynamicProjects.hs  DynamicWorkspaceGroups.hs  DynamicWorkspaceNames.hs  DynamicWorkspaceOrder.hs  DynamicWorkspaces.hs  EasyMotion.hs  FindEmptyWorkspace.hs  FlexibleManipulate.hs  FlexibleResize.hs  FloatKeys.hs  FloatSnap.hs  FocusNth.hs  GridSelect.hs  GroupNavigation.hs  InputMode.hs  KeyChord.hs  KeyRemap.hs  Launcher.hs  LinkWorkspaces.hs  MessageFeedback.hs  Minimize.hs  MostRecentlyUsed.hs  MouseGestures.hs  MouseResize.hs  Navigation2D.hs  NoBorders.hs  (+43 more)
XMonad/Actions/Menu/: Core.hs  Dzen.hs  Hidden.hs  KeyParse.hs  README.md
XMonad/Config/: Arossato.hs  Azerty.hs  Bepo.hs  Bluetile.hs  CustomKeys.hs  Desktop.hs  Dmwit.hs  Dons.hs  Droundy.hs  Example.hs  Gnome.hs  Kde.hs  LXQt.hs  Mate.hs  Monad.hs  PlainConfig.hs  Prime.hs  Saegesser.hs  Sjanssen.hs  Xfce.hs  dmwit.xmobarrc
XMonad/Doc/: Configuring.hs  Developing.hs  Extending.hs
XMonad/Float/: SimplestFloatDec.hs
XMonad/Hooks/: BorderPerWindow.hs  ClickableWorkspaces.hs  CurrentWorkspaceOnTop.hs  DebugEvents.hs  DebugKeyEvents.hs  DebugStack.hs  DynamicBars.hs  DynamicHooks.hs  DynamicIcons.hs  DynamicLog.hs  DynamicProperty.hs  EventHook.hs  EwmhDesktops  EwmhDesktops.hs  FadeInactive.hs  FadeWindows.hs  FloatConfigureReq.hs  FloatNext.hs  Focus.hs  FocusGuard.hs  ICCCMFocus.hs  InsertPosition.hs  ManageDebug.hs  ManageDocks.hs  ManageHelpers.hs  MessageHooks.hs  Minimize.hs  Modal.hs  OnPropertyChange.hs  Place.hs  PositionStoreHooks.hs  Qubes.hs  RefocusLast.hs  Rescreen.hs  RestoreMinimized.hs  ScreenCorners.hs  Script.hs  ServerMode.hs  SetCursor.hs  SetWMName.hs  (+11 more)
XMonad/Hooks/EWMH/: Desktops.hs
XMonad/Hooks/StatusBar/: PP.hs  WorkspaceScreen.hs
XMonad/Keys/: Core.hs  Events.hs  Parse.hs  Weird.hs
XMonad/Layout/: Accordion.hs  AutoMaster.hs  AvoidFloats.hs  BinaryColumn.hs  BinarySpacePartition.hs  BorderResize.hs  BoringWindows.hs  ButtonDecoration.hs  CenterMainFluid.hs  CenteredIfSingle.hs  CenteredMaster.hs  Circle.hs  CircleEx.hs  Column.hs  Columns.hs  Combo.hs  ComboP.hs  ConditionalLayout.hs  ConditionalModifier.hs  Cross.hs  Decoration.hs  DecorationAddons.hs  DecorationEx.hs  DecorationMadness.hs  Dishes.hs  DragPane.hs  DraggingVisualizer.hs  Drawer.hs  Dwindle.hs  DwmStyle.hs  FixedAspectRatio.hs  FixedColumn.hs  FocusTracking.hs  Fullscreen.hs  Gaps.hs  Grid.hs  GridVariants.hs  Groups.hs  Hidden.hs  HintedGrid.hs  (+74 more)
XMonad/Layout/DecorationEx/: Common.hs  DwmGeometry.hs  Engine.hs  Geometry.hs  LayoutModifier.hs  TabbedGeometry.hs  TextEngine.hs  Theme.hs  Types.hs  Widgets.hs
XMonad/Layout/Groups/: Examples.hs  Helpers.hs  Wmii.hs
XMonad/Layout/MultiToggle/: Instances.hs  TabBarDecoration.hs
XMonad/Prompt/: AppLauncher.hs  AppendFile.hs  ConfirmPrompt.hs  DirExec.hs  Directory.hs  DotDesktop.hs  DotDesktopParser.hs  Email.hs  FuzzyMatch.hs  Input.hs  Layout.hs  Man.hs  OrgMode.hs  Pass.hs  RunOrRaise.hs  Shell.hs  Ssh.hs  Theme.hs  Unicode.hs  Window.hs  Workspace.hs  XMonad.hs  Zsh.hs
XMonad/Util/: ActionCycle.hs  ActionQueue.hs  Anneal.hs  ClickableWorkspaces.hs  Cursor.hs  CustomKeys.hs  DebugWindow.hs  Dmenu.hs  DocumentedKeys.hs  DynamicScratchpads.hs  Dzen.hs  EWMH.hs  EZConfig.hs  ExclusiveScratchpads.hs  ExtensibleConf.hs  ExtensibleState.hs  Font.cpphs  Font.hs  Font.hsc  Grab.hs  Hacks.hs  History.hs  Image.hs  Invisible.hs  Loggers.hs  Minimize.hs  MutexScratchpads.hs  NamedActions.hs  NamedScratchpad.hs  NamedWindows.hs  NoTaskbar.hs  OneState.hs  Parser.hs  Paste.hs  PositionStore.hs  Process.hs  PureX.hs  Rectangle.hs  RemoteWindows.hs  Replace.hs  (+22 more)
XMonad/Util/Loggers/: NamedScratchpad.hs
XMonad/WorkspaceLayout/: Core.hs  Cycle.hs  Grid.hs  Util.hs
configs/: droundy.hs
examples/dzen-status/: Config.hs  readme  status
scripts/: clock.c  generate-configs  generate-configs.sh  grabDescriptions.hs  run-xmonad.sh  window-properties.sh  xinitrc  xmonad-acpi.c  xmonad-clock.c  xmonad-dynamic-workspaces.hs  xmonad-status.c  xmonad-status.hs  xmonadctl.hs  xmonadpropread.hs
tests/: CycleRecentWS.hs  EZConfig.hs  ExtensibleConf.hs  ExtensibleState.hs  GridSelect.hs  Instances.hs  Main.hs  ManageDocks.hs  NoBorders.hs  OrgMode.hs  RotateSome.hs  Selective.hs  SwapWorkspaces.hs  TallMastersCombo.hs  Utils.hs  WindowNavigation.hs  XPrompt.hs  genMain.hs  test_Selective.hs  test_SwapWorkspaces.hs  test_XPrompt.hs
