name:               xmonad-contrib
version:            0.10
homepage:           http://xmonad.org/
synopsis:           Third party extensions for xmonad
description:
    Third party tiling algorithms, configurations and scripts to xmonad,
    a tiling window manager for X.
    .
    For an introduction to building, configuring and using xmonad
    extensions, see "XMonad.Doc". In particular:
    .
    "XMonad.Doc.Configuring", a guide to configuring xmonad
    .
    "XMonad.Doc.Extending", using the contributed extensions library
    .
    "XMonad.Doc.Developing", introduction to xmonad internals and writing
    your own extensions.
    .
category:           System
license:            BSD3
license-file:       LICENSE
author:             Spencer Janssen
maintainer:         spencerjanssen@gmail.com
extra-source-files: README scripts/generate-configs scripts/run-xmonad.sh
                    scripts/window-properties.sh
                    scripts/xinitrc scripts/xmonad-acpi.c
                    scripts/xmonad-clock.c
                    tests/genMain.hs
                    tests/ManageDocks.hs
                    tests/Selective.hs
                    tests/SwapWorkspaces.hs
                    tests/XPrompt.hs
cabal-version:      >= 1.2.1
build-type:         Simple

flag small_base
  description: Choose the new smaller, split-up base package.

flag use_xft
  description: Use Xft to render text

flag testing
  description: Testing mode
  default: False

library
    if flag(small_base)
        build-depends: base >= 3 && < 5,
                       containers,
                       directory,
                       extensible-exceptions,
                       old-locale,
                       old-time,
                       process,
                       random
    else
        build-depends: base < 3

    if flag(use_xft)
        build-depends: X11-xft >= 0.2, utf8-string
        extensions: ForeignFunctionInterface
        cpp-options: -DXFT

    build-depends:      mtl >= 1 && < 3, unix, X11>=1.5.0.0 && < 1.6, xmonad>=0.10, xmonad<0.11, utf8-string

    if true
        ghc-options:    -fwarn-tabs -Wall

    extensions:         ForeignFunctionInterface

    if flag(testing)
        ghc-options:    -fwarn-tabs -Werror

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    if impl (ghc == 6.10.1) && arch (x86_64)
        ghc-options:    -O0

    exposed-modules:    XMonad.Doc
                        XMonad.Doc.Configuring
                        XMonad.Doc.Extending
                        XMonad.Doc.Developing
                        XMonad.Actions.BluetileCommands
                        XMonad.Actions.Commands
                        XMonad.Actions.ConstrainedResize
                        XMonad.Actions.CopyWindow
                        XMonad.Actions.CycleRecentWS
                        XMonad.Actions.CycleSelectedLayouts
                        XMonad.Actions.CycleWindows
                        XMonad.Actions.CycleWS
                        XMonad.Actions.DeManage
                        XMonad.Actions.DwmPromote
                        XMonad.Actions.DynamicWorkspaces
                        XMonad.Actions.DynamicWorkspaceGroups
                        XMonad.Actions.DynamicWorkspaceOrder
                        XMonad.Actions.FindEmptyWorkspace
                        XMonad.Actions.FlexibleManipulate
                        XMonad.Actions.FlexibleResize
                        XMonad.Actions.FloatKeys
                        XMonad.Actions.FloatSnap
                        XMonad.Actions.FocusNth
                        XMonad.Actions.GridSelect
                        XMonad.Actions.GroupNavigation
                        XMonad.Actions.MessageFeedback
                        XMonad.Actions.MouseGestures
                        XMonad.Actions.MouseResize
                        XMonad.Actions.NoBorders
                        XMonad.Actions.OnScreen
                        XMonad.Actions.PerWorkspaceKeys
                        XMonad.Actions.PhysicalScreens
                        XMonad.Actions.Plane
                        XMonad.Actions.Promote
                        XMonad.Actions.RandomBackground
                        XMonad.Actions.KeyRemap
                        XMonad.Actions.RotSlaves
                        XMonad.Actions.Search
                        XMonad.Actions.SimpleDate
                        XMonad.Actions.SinkAll
                        XMonad.Actions.SpawnOn
                        XMonad.Actions.Submap
                        XMonad.Actions.SwapWorkspaces
                        XMonad.Actions.TagWindows
                        XMonad.Actions.TopicSpace
                        XMonad.Actions.UpdateFocus
                        XMonad.Actions.UpdatePointer
                        XMonad.Actions.Warp
                        XMonad.Actions.WindowBringer
                        XMonad.Actions.WindowGo
                        XMonad.Actions.WindowMenu
                        XMonad.Actions.WindowNavigation
                        XMonad.Actions.WithAll
                        XMonad.Actions.WorkspaceCursors
                        XMonad.Actions.WorkspaceNames
                        XMonad.Config.Arossato
                        XMonad.Config.Azerty
                        XMonad.Config.Bluetile
                        XMonad.Config.Desktop
                        XMonad.Config.Droundy
                        XMonad.Config.Gnome
                        XMonad.Config.Kde
                        XMonad.Config.Sjanssen
                        XMonad.Config.Xfce
                        XMonad.Hooks.CurrentWorkspaceOnTop
                        XMonad.Hooks.DebugKeyEvents
                        XMonad.Hooks.DynamicHooks
                        XMonad.Hooks.DynamicLog
                        XMonad.Hooks.EwmhDesktops
                        XMonad.Hooks.FadeInactive
                        XMonad.Hooks.FadeWindows
                        XMonad.Hooks.FloatNext
                        XMonad.Hooks.ICCCMFocus
                        XMonad.Hooks.InsertPosition
                        XMonad.Hooks.ManageDocks
                        XMonad.Hooks.ManageHelpers
                        XMonad.Hooks.Minimize
                        XMonad.Hooks.Place
                        XMonad.Hooks.PositionStoreHooks
                        XMonad.Hooks.RestoreMinimized
                        XMonad.Hooks.ScreenCorners
                        XMonad.Hooks.Script
                        XMonad.Hooks.ServerMode
                        XMonad.Hooks.SetWMName
                        XMonad.Hooks.ToggleHook
                        XMonad.Hooks.UrgencyHook
                        XMonad.Hooks.WorkspaceByPos
                        XMonad.Hooks.XPropManage
                        XMonad.Layout.Accordion
                        XMonad.Layout.AutoMaster
                        XMonad.Layout.BorderResize
                        XMonad.Layout.BoringWindows
                        XMonad.Layout.ButtonDecoration
                        XMonad.Layout.CenteredMaster
                        XMonad.Layout.Circle
                        XMonad.Layout.Column
                        XMonad.Layout.Combo
                        XMonad.Layout.ComboP
                        XMonad.Layout.Cross
                        XMonad.Layout.Decoration
                        XMonad.Layout.DecorationAddons
                        XMonad.Layout.DecorationMadness
                        XMonad.Layout.Dishes
                        XMonad.Layout.DraggingVisualizer
                        XMonad.Layout.DragPane
                        XMonad.Layout.Drawer
                        XMonad.Layout.DwmStyle
                        XMonad.Layout.FixedColumn
                        XMonad.Layout.Fullscreen
                        XMonad.Layout.Gaps
                        XMonad.Layout.Grid
                        XMonad.Layout.GridVariants
                        XMonad.Layout.Groups
                        XMonad.Layout.Groups.Examples
                        XMonad.Layout.Groups.Helpers
                        XMonad.Layout.Groups.Wmii
                        XMonad.Layout.HintedGrid
                        XMonad.Layout.HintedTile
                        XMonad.Layout.IM
                        XMonad.Layout.ImageButtonDecoration
                        XMonad.Layout.IndependentScreens
                        XMonad.Layout.LayoutBuilder
                        XMonad.Layout.LayoutBuilderP
                        XMonad.Layout.LayoutCombinators
                        XMonad.Layout.LayoutHints
                        XMonad.Layout.LayoutModifier
                        XMonad.Layout.LayoutScreens
                        XMonad.Layout.LimitWindows
                        XMonad.Layout.MagicFocus
                        XMonad.Layout.Magnifier
                        XMonad.Layout.Master
                        XMonad.Layout.Maximize
                        XMonad.Layout.MessageControl
                        XMonad.Layout.Minimize
                        XMonad.Layout.Monitor
                        XMonad.Layout.Mosaic
                        XMonad.Layout.MosaicAlt
                        XMonad.Layout.MouseResizableTile
                        XMonad.Layout.MultiColumns
                        XMonad.Layout.MultiToggle
                        XMonad.Layout.MultiToggle.Instances
                        XMonad.Layout.Named
                        XMonad.Layout.NoBorders
                        XMonad.Layout.NoFrillsDecoration
                        XMonad.Layout.OneBig
                        XMonad.Layout.PerWorkspace
                        XMonad.Layout.PositionStoreFloat
                        XMonad.Layout.Reflect
                        XMonad.Layout.Renamed
                        XMonad.Layout.ResizableTile
                        XMonad.Layout.ResizeScreen
                        XMonad.Layout.Roledex
                        XMonad.Layout.ShowWName
                        XMonad.Layout.SimpleDecoration
                        XMonad.Layout.SimpleFloat
                        XMonad.Layout.Simplest
                        XMonad.Layout.SimplestFloat
                        XMonad.Layout.Spacing
                        XMonad.Layout.Spiral
                        XMonad.Layout.Square
                        XMonad.Layout.StackTile
                        XMonad.Layout.SubLayouts
                        XMonad.Layout.TabBarDecoration
                        XMonad.Layout.Tabbed
                        XMonad.Layout.ThreeColumns
                        XMonad.Layout.ToggleLayouts
                        XMonad.Layout.TrackFloating
                        XMonad.Layout.TwoPane
                        XMonad.Layout.WindowArranger
                        XMonad.Layout.WindowNavigation
                        XMonad.Layout.WindowSwitcherDecoration
                        XMonad.Layout.WorkspaceDir
                        XMonad.Layout.ZoomRow
                        XMonad.Prompt
                        XMonad.Prompt.AppendFile
                        XMonad.Prompt.AppLauncher
                        XMonad.Prompt.Directory
                        XMonad.Prompt.DirExec
                        XMonad.Prompt.Email
                        XMonad.Prompt.Input
                        XMonad.Prompt.Layout
                        XMonad.Prompt.Man
                        XMonad.Prompt.RunOrRaise
                        XMonad.Prompt.Shell
                        XMonad.Prompt.Ssh
                        XMonad.Prompt.Theme
                        XMonad.Prompt.Window
                        XMonad.Prompt.Workspace
                        XMonad.Prompt.XMonad
                        XMonad.Util.Cursor
                        XMonad.Util.CustomKeys
                        XMonad.Util.Dmenu
                        XMonad.Util.Dzen
                        XMonad.Util.ExtensibleState
                        XMonad.Util.EZConfig
                        XMonad.Util.Font
                        XMonad.Util.Image
                        XMonad.Util.Invisible
                        XMonad.Util.Loggers
                        XMonad.Util.NamedActions
                        XMonad.Util.NamedScratchpad
                        XMonad.Util.NamedWindows
                        XMonad.Util.Paste
                        XMonad.Util.PositionStore
                        XMonad.Util.Replace
                        XMonad.Util.Run
                        XMonad.Util.Scratchpad
                        XMonad.Util.SpawnOnce
                        XMonad.Util.Stack
                        XMonad.Util.StringProp
                        XMonad.Util.Themes
                        XMonad.Util.Timer
                        XMonad.Util.Types
                        XMonad.Util.WindowProperties
                        XMonad.Util.WorkspaceCompare
                        XMonad.Util.XSelection
                        XMonad.Util.XUtils
